chore: move the build to Paper 26.2, Skript 2.16.2 and JDK 25
The plugin compiled against Paper 1.21.8 and Skript 2.13.1, so it could not run on anything newer. Skript 2.16 replaced the registration API and Paper 26.2 is the newest release Skript 2.16.2 supports, which is why the two move together.

- Gradle 9.1 and the Paper 26.2 dev bundle on a JDK 25 toolchain.
- The version catalog is the only file a version is written in.
- Dokka is gone: it only published KDoc, which is not what this project documents.
- The plugin-it subproject is gone: it was a second plugin whose only job was to be clicked by hand, which the server test now does without a person.
- cnMirror puts a mirror in front of Maven Central for networks that answer 403 to some Central requests.
- releaseNotes writes this version's CHANGELOG section, which the release workflow publishes.