@@ -1,24 +1,32 @@
 import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar
-import org.jetbrains.dokka.gradle.engine.parameters.VisibilityModifier
-import org.jetbrains.dokka.gradle.tasks.DokkaGenerateTask
-import org.jetbrains.kotlin.gradle.dsl.JvmTarget
+import xyz.jpenilla.runpaper.task.RunServer
 import java.net.URI
-
 
 plugins {
     java
-    id("com.gradleup.shadow") version "9.0.0-beta15"
-    id("org.jetbrains.kotlin.jvm") version "2.2.21"
-    id("io.papermc.paperweight.userdev") version "2.0.0-beta.18"
-    id("org.jetbrains.dokka") version "2.1.0"
+    alias(libs.plugins.shadow)
+    alias(libs.plugins.kotlin.jvm)
+    alias(libs.plugins.paperweight.userdev)
+    alias(libs.plugins.ktlint)
+    alias(libs.plugins.run.paper)
 }
 
-group = "io.github.heyhey123"
-version = "1.0.4"
-val kotlinVersion = "2.2.21"
+// "26.2.build.124-stable" is two facts in one string: the Minecraft version the plugin targets and the
+// Paper build the dev bundle comes from. `api-version` in plugin.yml has to be the first of them, and
+// so does the server the test boots, so both read it from here rather than repeating it.
+val paperVersion: String = libs.versions.paper.get()
+val paperMinecraftVersion: String = paperVersion.substringBefore(".build.")
 val shadePrefix: String by project
 
 repositories {
+    // In front of Central on purpose: Central answers some requests from some networks with 403
+    // ("Forbidden"), and a refused request ends resolution for that repository instead of falling
+    // through to the next one, so the mirror has to come first. Enable it with `-PcnMirror` or by
+    // adding `cnMirror=true` to <GRADLE_USER_HOME>/gradle.properties; that is a machine setting rather
+    // than a project one because a CI runner does not need it.
+    if (providers.gradleProperty("cnMirror").isPresent) {
+        maven("https://maven.aliyun.com/repository/public")
+    }
     mavenCentral()
     maven("https://repo.papermc.io/repository/maven-public/")
     maven("https://repo.skriptlang.org/releases")
@@ -29,25 +37,32 @@ repositories {
 
 dependencies {
     implementation(kotlin("stdlib"))
-    paperweight.paperDevBundle("1.21.8-R0.1-SNAPSHOT")
-    compileOnly("com.github.SkriptLang:Skript:2.13.1")
-    compileOnly("com.github.retrooper:packetevents-spigot:2.9.5")
-    implementation("xyz.jpenilla:reflection-remapper:0.1.3")
+    // Server internals (net.minecraft.*, org.bukkit.craftbukkit.*) are not on any public repository:
+    // paperweight is the only supported way to compile against them. Paper 26.x runs Mojang-mapped,
+    // so there is no reobfuscation step and the compiled output loads as-is.
+    paperweight.paperDevBundle(paperVersion)
+    compileOnly(libs.skript)
+    compileOnly(libs.packetevents)
 
     testImplementation(kotlin("test"))
-    testImplementation("org.mockbukkit.mockbukkit:mockbukkit-v1.21:4.0.0")
-    testImplementation("io.mockk:mockk:1.14.6")
+    // Stated rather than inherited: MockBukkit does not put the API this project compiles against on
+    // the test classpath, and the tests need Bukkit and Adventure types to mock and to build titles.
+    testImplementation(libs.paper.api)
+    testImplementation(libs.mockbukkit)
+    testImplementation(libs.mockk)
 }
 
 paperweight {
     addServerDependencyTo = configurations.named(JavaPlugin.COMPILE_ONLY_CONFIGURATION_NAME).map { setOf(it) }
-    // exclude the paperweight provided artifact at test time
 }
 
 java {
     withSourcesJar()
-    sourceCompatibility = JavaVersion.VERSION_21
-    targetCompatibility = JavaVersion.VERSION_21
+    // Paper 26.2 is compiled for Java 25, so the compiler has to be able to read version 69 class
+    // files. Gradle provisions or locates the toolchain; the server itself already requires Java 25.
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(25)
+    }
 }
 
 tasks.withType<JavaCompile> {
@@ -55,8 +70,8 @@ tasks.withType<JavaCompile> {
 }
 
 kotlin {
+    jvmToolchain(25)
     compilerOptions {
-        jvmTarget = JvmTarget.JVM_21
         freeCompilerArgs.addAll("-Xallow-unstable-dependencies")
     }
 }
@@ -66,20 +81,32 @@ tasks {
         archivesName.set("xiaojiegui")
     }
 
+    // `plugin.yml` is the one place a server reads the version from, so it is expanded from the same
+    // value the jar is named with rather than repeating the literal.
+    processResources {
+        val expansions = mapOf(
+            "version" to version.toString(),
+            "apiVersion" to paperMinecraftVersion
+        )
+        inputs.properties(expansions)
+        filesMatching("plugin.yml") {
+            expand(expansions)
+        }
+    }
+
     withType<ShadowJar> {
-        val kotlinEscapedVersion = kotlinVersion.filter { it != '.' }
+        val kotlinEscapedVersion = libs.versions.kotlin.get().filter { it != '.' }
         archiveAppendix.set("")
         archiveClassifier.set("")
-        archiveVersion.set(version as String)
+        archiveVersion.set(version.toString())
         destinationDirectory.set(file("$rootDir/build/dist"))
 
         minimize()
 
-        //relocate Kotlin
-        relocate("kotlin.", "$shadePrefix.kotlin${kotlinEscapedVersion}.")
+        // The server classpath is shared with every other plugin, so anything shaded in is relocated
+        // into a package of its own.
+        relocate("kotlin.", "$shadePrefix.kotlin$kotlinEscapedVersion.")
         relocate("org.jetbrains.annotations.", "$shadePrefix.org.jetbrains.annotations2602.")
-        relocate("net.fabricmc.", "$shadePrefix.net.fabricmc.")
-        relocate("xyz.jpenilla.reflectionremapper.", "$shadePrefix.xyz.jpenilla.reflectionremapper.")
     }
 
     build {
@@ -88,48 +115,445 @@ tasks {
 
     test {
         useJUnitPlatform()
+        // MockK instruments classes by attaching a ByteBuddy agent to the JVM it runs in. JDK 25
+        // refuses self-attach unless this is set, and the external-process fallback needs a JVM the
+        // Gradle worker cannot always spawn, so without it every mocking test dies in its initializer.
+        jvmArgs("-Djdk.attach.allowAttachSelf=true")
     }
+}
 
-    register("rootBuild") {
-        group = "build"
-        description = "Build root project only"
-        dependsOn(":build")
-    }
-    dokka {
-        dokkaPublications.html {
-            suppressInheritedMembers = true
+// --- release notes ----------------------------------------------------------------------------------
+//
+// Writes the CHANGELOG section for the version in `gradle.properties` to `build/release-notes.md`, which
+// is what the release workflow publishes. The release page and the file therefore cannot disagree, and
+// correcting the notes of a release that is already published is the same extraction plus
+// `gh release edit v<version> --notes-file build/release-notes.md`.
+
+val releaseNotes by tasks.registering {
+    group = "documentation"
+    description = "Extracts this version's CHANGELOG section into build/release-notes.md."
+
+    val changelog = layout.projectDirectory.file("CHANGELOG.md")
+    val releaseVersion = version.toString()
+    val releaseNotesFile = layout.buildDirectory.file("release-notes.md")
+    inputs.file(changelog)
+    inputs.property("version", releaseVersion)
+    outputs.file(releaseNotesFile)
+
+    doLast {
+        val heading = "## $releaseVersion"
+        val lines = changelog.asFile.readLines()
+        val start = lines.indexOfFirst { it.trim() == heading }
+        if (start < 0) {
+            throw GradleException(
+                "CHANGELOG.md has no '$heading' section. Write what this release changes before releasing."
+            )
         }
+        // Up to the next version heading, so one release cannot publish another one's notes.
+        val rest = lines.drop(start + 1)
+        val next = rest.indexOfFirst { it.startsWith("## ") }
+        val section = (if (next < 0) rest else rest.take(next)).joinToString("\n").trim()
+        if (section.isEmpty()) {
+            throw GradleException("The '$heading' section of CHANGELOG.md is empty.")
+        }
+        val target = releaseNotesFile.get().asFile
+        target.parentFile.mkdirs()
+        target.writeText(section + "\n")
+        logger.lifecycle("Wrote $target (${section.lines().size} lines) from '$heading'.")
+    }
+}
 
-        dokkaSourceSets.main {
-            sourceRoots.from(file("src"))
-            documentedVisibilities.set(setOf(VisibilityModifier.Public))
-            jdkVersion = 21
-            sourceLink {
-                localDirectory.set(file("src/main/kotlin"))
-                remoteUrl.set(URI("https://github.com/heyhey123-git/xiaojie-gui/tree/master/src/main/kotlin"))
-                remoteLineSuffix.set("#L")
-            }
+// --- server test ------------------------------------------------------------------------------------
+//
+// Boots a real Paper server with Skript next to the built jar and reads the log afterwards. It is the
+// only layer that can see registration and parse failures: Skript reports those in prose and carries
+// on, and MockBukkit cannot host Skript at all (Skript's main class is final, and MockBukkit loads a
+// plugin by subclassing it).
+//
+// `server-test/skript/*.sk` reports what it did as `XIAOJIE_SELFTEST detail: <name> -> <message>`
+// lines; the assertions live in `VerifySkriptServerTest` below, next to the log they read.
 
-            externalDocumentationLinks {
-                register("skript") {
-                    url("https://docs.skriptlang.org/javadocs/")
-                    packageListUrl("https://docs.skriptlang.org/javadocs/element-list")
+val serverTestDirectory = layout.projectDirectory.dir("server-test/run")
+val serverTestScripts = layout.projectDirectory.dir("server-test/skript")
+val serverTestElements =
+    layout.projectDirectory.dir("src/main/kotlin/io/github/heyhey123/xiaojiegui/skript/elements")
+
+// The plugins the server needs besides ours, pinned to the releases that support Paper 26.2: Skript
+// 2.16.2 is the release that added 26.2, PacketEvents 2.13.0 is the one that did too, and SkBee 3.25.4
+// is the release whose changelog names 26.2 and Skript 2.15+ as its floor; it is in this list because
+// it is the only thing that can hand the addon a text component, which is what the title path needs.
+// Downloaded by this build rather than by run-paper so the exact asset is visible next to that reason;
+// SkBee publishes no asset on GitHub, so its URL is the Modrinth CDN file of that release.
+val serverTestPlugins = mapOf(
+    "Skript-2.16.2.jar" to
+        "https://github.com/SkriptLang/Skript/releases/download/2.16.2/Skript-2.16.2.jar",
+    "packetevents-spigot-2.13.0.jar" to
+        "https://github.com/retrooper/packetevents/releases/download/v2.13.0/packetevents-spigot-2.13.0.jar",
+    "SkBee-3.25.4.jar" to
+        "https://cdn.modrinth.com/data/a0tlbHZO/versions/bTBlzhGZ/SkBee-3.25.4.jar"
+)
+
+// One entry per `XIAOJIE_SELFTEST detail:` name the scripts report, mapped to a substring its message
+// has to contain. Kept here rather than derived from the scripts so that a script whose element stopped
+// working fails the test instead of quietly shrinking what is covered; the substring is what makes the
+// line an assertion, since a line that exists but reports the wrong count, mode or title now fails.
+//
+// The values are the ones the run this file was written against reported. An empty value means the
+// message cannot be pinned, and every one of those carries the reason next to it.
+val serverTestExpectedDetails = mapOf(
+    "create phantom chest menu" to "1 page(s)",
+    "lookup menu by id" to "id selftest, mode phantom, type chest inventory",
+    "menu mode is text" to "phantom",
+    "menu defaults" to "page 1, delay 50, 0 viewer(s)",
+    "enumerate menus" to "1 id(s), 1 menu(s)",
+    "player inventory condition" to "shown",
+    "destroy menu" to "destroyed",
+    "create static hopper menu" to "1 page(s), mode static",
+    "create menu hiding the player inventory" to "default title HideSelftest, type chest inventory",
+    // "not hidden" contains "hidden", so this pins the flag but the script keeps its own FAILED branch.
+    "hide flag took effect" to "hidden",
+    // One file per inventory type: that type's layout becoming a page is the whole assertion.
+    "inventory type beacon" to "1 page(s)",
+    "inventory type workbench" to "1 page(s)",
+    "inventory type lectern" to "1 page(s)",
+    "inventory type smithing" to "1 page(s)",
+    "inventory type barrel" to "1 page(s)",
+    "inventory type dispenser" to "1 page(s)",
+    "inventory type ender chest" to "1 page(s)",
+    "inventory type enchanting" to "1 page(s)",
+    "inventory type cartography" to "1 page(s)",
+    "create pages menu" to "default title Pages, type chest inventory",
+    "insert pages" to "3 page(s)",
+    "create keys menu" to "default title Keys, type chest inventory",
+    "keys and overrides" to "9 slot(s), key A",
+    "page title" to "Page One",
+    // The callback body can only run for a clicking player and this layer has none, so the line reports
+    // that the section parsed and registered; there is no runtime value to pin.
+    "slot callback section" to "registered",
+    "destroy both menus" to "done",
+    "create titles menu" to "default title Title Menu, type chest inventory",
+    "insert page with title" to "2 page(s), page 2 titled Second",
+    "update page title" to "Renamed",
+    "tagged title form changes nothing" to "Renamed",
+    // Both statements need a player and a session this layer does not have, so `parsed` is the value.
+    "turn page title parses" to "parsed",
+    "session title parses" to "parsed",
+    "destroy titles menu" to "done",
+    "create forms menu" to "default title Forms, type chest inventory",
+    "natural menu forms" to "9 slot(s), key A",
+    "destroy menu by id" to "done",
+    "create paged menu" to "default title Paged, type chest inventory",
+    "page contract" to "the layout became page 1",
+    "page contract default page" to "2",
+    // Only reachable with SkBee installed: a title written as a text component, read back as text.
+    "skbee component title" to "Selftest Component Title"
+)
+
+// Names a script reports that the map above does not mention, so adding a name to a script is a test
+// failure rather than a line nothing checks.
+//
+// A name containing `FAILED` is the other half of that mechanism and is expected to be undeclared: the
+// scripts log it only from the branch that found the wrong thing, so a run in which it appears fails
+// here instead of passing on a line that merely exists.
+val serverTestUndeclaredDetails = providers.provider {
+    val reported = serverTestScripts.asFile.walkTopDown()
+        .filter { it.isFile && it.extension == "sk" }
+        .flatMap { file ->
+            // Comments describe the line format, so they would otherwise be read as names nothing declares.
+            file.readLines()
+                .filterNot { it.trimStart().startsWith("#") }
+                .flatMap { line ->
+                    Regex("""XIAOJIE_SELFTEST detail:\s*(.+?)\s*->""")
+                        .findAll(line)
+                        .map { it.groupValues[1] }
                 }
-                register("paper") {
-                    url("https://jd.papermc.io/paper/1.21.10/")
-                    packageListUrl("https://jd.papermc.io/paper/1.21.10/element-list")
-                }
+                .asSequence()
+        }
+        .filterNot { "FAILED" in it }
+        .toSet()
+    reported - serverTestExpectedDetails.keys
+}
+
+val prepareServerTest by tasks.registering {
+    description = "Prepares the disposable server directory that `runServer` and `serverTest` use."
+    group = "verification"
+    inputs.dir(serverTestScripts)
+    inputs.dir(serverTestElements)
+    inputs.file("server-test/server.properties")
+    doLast {
+        val run = serverTestDirectory.asFile
+        val scripts = run.resolve("plugins/Skript/scripts")
+        scripts.mkdirs()
+        // Paper refuses to start without this. Writing it records acceptance of the Minecraft EULA
+        // (https://aka.ms/MinecraftEULA) for this disposable test server, and for no other server.
+        run.resolve("eula.txt").writeText("eula=true\n")
+        file("server-test/server.properties").copyTo(run.resolve("server.properties"), overwrite = true)
+        scripts.deleteRecursively()
+        scripts.mkdirs()
+        serverTestScripts.asFile.copyRecursively(scripts, overwrite = true)
+        // The one script that is not checked in: it is rebuilt from the elements' own `@Example`
+        // annotations, so a documented example that Skript cannot read fails the run like any other
+        // broken line instead of living only in the docs.
+        scripts.resolve("07-examples.sk").writeText(exampleGateScript(serverTestElements.asFile))
+        serverTestPlugins.forEach { (name, url) ->
+            val jar = run.resolve("plugins/$name")
+            if (jar.isFile) return@forEach
+            logger.lifecycle("Downloading $name")
+            URI(url).toURL().openStream().use { input -> jar.outputStream().use { input.copyTo(it) } }
+        }
+    }
+}
+
+tasks.named<RunServer>("runServer") {
+    dependsOn(prepareServerTest)
+    minecraftVersion(paperMinecraftVersion)
+    runDirectory.set(serverTestDirectory)
+    // The shaded jar is the plugin under test; run-paper copies it into the run directory on each run.
+    pluginJars(tasks.shadowJar)
+    // Paper 26.2 refuses to start on anything older than Java 25, and the build itself may be running
+    // on an older JDK, so the server starts on the toolchain the code is compiled for.
+    javaLauncher.set(javaToolchains.launcherFor { languageVersion = JavaLanguageVersion.of(25) })
+}
+
+val serverTest by tasks.registering(VerifySkriptServerTest::class) {
+    description = "Boots a Paper server with Skript and checks what this plugin did there."
+    group = "verification"
+    dependsOn(tasks.named("runServer"))
+    serverLog.set(serverTestDirectory.file("logs/latest.log"))
+    expectedDetails.set(serverTestExpectedDetails)
+    undeclaredDetails.set(serverTestUndeclaredDetails)
+}
+
+/**
+ * Checks the log a `serverTest` run wrote.
+ *
+ * The Skript side reports what it did as `XIAOJIE_SELFTEST` lines, so the assertions stay here, where
+ * they can be read and changed without writing Skript.
+ */
+abstract class VerifySkriptServerTest : DefaultTask() {
+
+    /** The log of the server that just ran. */
+    @get:Internal
+    abstract val serverLog: RegularFileProperty
+
+    /** For each `XIAOJIE_SELFTEST detail:` name the scripts have to report, a substring its message must contain. */
+    @get:Input
+    abstract val expectedDetails: MapProperty<String, String>
+
+    /** Names a script reports that [expectedDetails] does not list. */
+    @get:Input
+    abstract val undeclaredDetails: SetProperty<String>
+
+    @TaskAction
+    fun checkLog() {
+        val log = serverLog.get().asFile
+        if (!log.isFile) throw GradleException("The server wrote no log at ${log.absolutePath}.")
+
+        val lines = log.readLines()
+        val problems = mutableListOf<String>()
+
+        fun requireLine(description: String, text: String) {
+            if (lines.none { text in it }) problems += "$description\n      absent: $text"
+        }
+
+        fun forbidLine(description: String, pattern: Regex) {
+            lines.firstOrNull { pattern.containsMatchIn(it) }
+                ?.let { problems += "$description\n      found: $it" }
+        }
+
+        requireLine("The plugin never announced that it enabled.", "XiaojieGUI has been enabled!")
+        requireLine("The self-test stopped early: it never reached its last line.", "XIAOJIE_SELFTEST=STOPPED")
+        // Two different failures, reported as two different things: a name nothing logged is a missing
+        // check, and a name that logged the wrong message is a check that ran and found something else.
+        expectedDetails.get().forEach { (detail, expected) ->
+            val marker = "XIAOJIE_SELFTEST detail: $detail ->"
+            val line = lines.firstOrNull { marker in it }
+            if (line == null) {
+                problems += "The script never reported `$detail`.\n      absent: $marker"
+                return@forEach
+            }
+            val message = line.substringAfter(marker)
+            if (expected.isNotEmpty() && expected !in message) {
+                problems += "The script reported `$detail`, but with the wrong message." +
+                    "\n      present:  ${message.trim()}" +
+                    "\n      expected: a message containing `$expected`"
             }
         }
 
-        pluginsConfiguration.html {
-//            customStyleSheets.from("styles.css")
-//            customAssets.from("logo.png")
-            footerMessage.set("Copyright (c) 2025 heyhey123, All rights reserved.")
+        // Skript reports a broken element or an unparseable script in prose and keeps going, so the log
+        // is the only place such a failure shows up. Every shape of that message is covered: a line Skript
+        // cannot read says "this line", a statement says "this condition/effect" and a condition says
+        // "this condition", so matching the prefix catches all three.
+        forbidLine("Skript reported a severe error.", Regex("""\[Skript]\s+Severe Error"""))
+        forbidLine("Skript could not compile a registered pattern.", Regex("pattern compiling exception"))
+        forbidLine("A script line could not be understood.", Regex("""Can't understand this"""))
+        // Skript refuses an expression that belongs to another event with "The expression 'x' may only be
+        // used in an inventory click event", which is not one of the three wordings above. The `[Skript]
+        // Line N:` header cannot be forbidden itself: warnings and the addon's own deliberate runtime
+        // errors (`Title cannot be null.`) print under the same header.
+        forbidLine(
+            "An expression was used outside the event it belongs to.",
+            Regex("""may only be used in an? [a-z ]*event""")
+        )
+        // The scripts name a branch `... FAILED ...` when it found the wrong thing, and that half of the
+        // mechanism only works here: the undeclared-name check below reads the scripts, not the log.
+        forbidLine("One of the scripts reported a failed check.", Regex("""XIAOJIE_SELFTEST detail: .*FAILED"""))
+
+        val undeclared = undeclaredDetails.get()
+        if (undeclared.isNotEmpty()) {
+            problems += "Scripts report names the test does not expect: ${undeclared.joinToString(", ")}"
         }
 
+        if (problems.isNotEmpty()) {
+            throw GradleException(
+                buildString {
+                    append("The server test found ${problems.size} problem(s) in ${log.absolutePath}:")
+                    problems.forEach { append("\n  - ").append(it) }
+                }
+            )
+        }
+        logger.lifecycle(
+            "Server test passed: all ${expectedDetails.get().size} detail line(s) and the shutdown marker are in the log."
+        )
     }
-    withType<DokkaGenerateTask>().configureEach {
-        outputDirectory.set(layout.buildDirectory.dir("buildDocs/dokka"))
+}
+
+/**
+ * A Skript file that parses every `@Example`/`@Examples` annotation of the elements under [root].
+ *
+ * The annotations are Skript that users copy, and Skript's docs generator accepts an example its own
+ * parser rejects, so nothing checked them. Handing them back to Skript turns a broken example into
+ * `Can't understand this` in the log the server test already reads.
+ *
+ * The example itself decides how it is run: an example is a whole block when its first line starts a
+ * top-level script structure, which for this addon is an `on ...:` event or a `command /...:`
+ * declaration; that cannot live inside a trigger, so it is written out as it stands. Everything else is
+ * a statement, and a statement cannot sit at the top level of a script, so it goes into a command
+ * trigger of its own, one command per example. Annotations are already indented the way Skript needs
+ * them, so the block form is passed through unchanged rather than re-indented here.
+ */
+fun exampleGateScript(root: File): String = buildString {
+    appendLine("# GENERATED by `prepareServerTest` from the `@Example` annotations under")
+    appendLine("# ${root.relativeTo(projectDir).invariantSeparatorsPath}. Do not edit: the annotations are the source.")
+    var number = 0
+    root.walkTopDown()
+        .filter { it.isFile && it.extension == "kt" }
+        .sortedBy { it.relativeTo(root).invariantSeparatorsPath }
+        .forEach { file ->
+            documentedExamples(file.readText()).forEach { example ->
+                number++
+                // Tabs are indentation, and one level of it is four spaces everywhere else in this repo.
+                val lines = example.lines().map { it.replace("\t", "    ") }
+                appendLine()
+                appendLine("# ${file.relativeTo(root).invariantSeparatorsPath}")
+                if (isWholeBlock(lines)) {
+                    lines.forEach { appendLine(it.trimEnd()) }
+                } else {
+                    appendLine("command /xiaojiegui-example-$number:")
+                    appendLine("    trigger:")
+                    lines.forEach { appendLine("        ${it.trimEnd()}") }
+                }
+            }
+        }
+    if (number == 0) {
+        throw GradleException("No `@Example` annotation was found under ${root.absolutePath}.")
+    }
+    appendLine()
+}
+
+/** Whether [lines] start a top-level script structure rather than a statement. */
+fun isWholeBlock(lines: List<String>): Boolean {
+    val first = lines.firstOrNull { it.isNotBlank() }?.trim() ?: return false
+    // A trailing `#` comment is not part of the structure: Skript strips it before it parses the line.
+    val head = first.substringBefore('#').trimEnd()
+    val keyword = head.substringBefore(' ').substringBefore(':')
+    return head.endsWith(":") && keyword in setOf("on", "command")
+}
+
+/**
+ * The examples [source] documents, one entry per `@Example`/`@Examples` annotation, with the
+ * annotation's arguments joined by newlines the way the docs tool shows them.
+ *
+ * The annotations are read out of the source text because they are a documentation contract: nothing
+ * checks that the compiled classes still carry them, so depending on them here would be a second thing
+ * to keep working rather than the same thing.
+ */
+fun documentedExamples(source: String): List<String> {
+    val examples = mutableListOf<String>()
+    var cursor = 0
+    while (true) {
+        val annotation = source.indexOf("@Example", cursor)
+        if (annotation < 0) return examples
+        var open = annotation + "@Example".length
+        if (source.getOrNull(open) == 's') open++
+        if (source.getOrNull(open) != '(') {
+            cursor = annotation + 1
+            continue
+        }
+
+        val arguments = mutableListOf<StringBuilder>()
+        // Kotlin folds `"a" + "b"` in an annotation into the one string the docs tool shows, so the
+        // literal after a `+` continues the previous line instead of starting a new one.
+        var continued = false
+        var depth = 0
+        var index = open
+        while (index < source.length) {
+            val char = source[index]
+            when {
+                char == '(' -> {
+                    depth++
+                    index++
+                }
+
+                char == ')' -> {
+                    depth--
+                    index++
+                    if (depth == 0) break
+                }
+
+                char == '"' -> {
+                    // Kotlin's raw strings keep the newline after the opening quotes, and the docs tool
+                    // drops it, so it is dropped here too: the examples on both sides stay identical.
+                    val raw = source.startsWith("\"\"\"", index)
+                    val delimiter = if (raw) "\"\"\"" else "\""
+                    val text = StringBuilder()
+                    index += delimiter.length
+                    while (index < source.length && !source.startsWith(delimiter, index)) {
+                        val current = source[index]
+                        if (!raw && current == '\\') {
+                            index++
+                            text.append(
+                                when (val escaped = source[index]) {
+                                    'n' -> '\n'
+                                    't' -> '\t'
+                                    'r' -> '\r'
+                                    else -> escaped
+                                }
+                            )
+                        } else {
+                            text.append(current)
+                        }
+                        index++
+                    }
+                    index += delimiter.length
+
+                    if (continued && arguments.isNotEmpty()) {
+                        arguments.last().append(text)
+                    } else {
+                        arguments += StringBuilder(text)
+                    }
+
+                    var lookahead = index
+                    while (lookahead < source.length && source[lookahead].isWhitespace()) lookahead++
+                    continued = source.getOrNull(lookahead) == '+'
+                    if (continued) index = lookahead + 1
+                }
+
+                else -> index++
+            }
+        }
+
+        examples += arguments.joinToString("\n") { it.toString() }.removePrefix("\n").trimEnd()
+        cursor = index
     }
 }
